# casic

./: .gitignore  CMakeLists.txt  Makefile  README.md  grammar
include/: AST.h  intermediate.h  lexer.h  parser.h  token.h  typedef.h
lib/: CMakeLists.txt  libcasic.s
src/: AST.c  casic.c  intermediate.c  lexer.c  parser.c  token.c
test/: test.casic
